@@ -306,25 +306,29 @@ DAMAGES.
 
 #include <sys/types.h>
 #ifndef HAVE_DECL_PADSIZE
-#define PADSIZE 512
+#define PADSIZE 8192
 #endif
 
 
 #ifdef HAVE_MACHINE_PARAM_H
 #include <machine/param.h>
+#ifndef CYGWIN
 #define PAGESIZE NBPG
+#else
+#define PAGESIZE 8192
+#endif
 #endif
 
 #ifndef PAGESIZE
 #ifndef HAVE_DECL_PAGESIZE
 #include <limits.h>
 #else
-#define PAGESIZE 512		/* Should work for systems I know about. */
+#define PAGESIZE 8192		/* Should work for systems I know about. */
 #endif
 #endif				/* Too big is better than too small.     */
 
 #ifndef PAGESIZE		/* Still didn't find a pagesize... */
-#define PAGESIZE 512
+#define PAGESIZE 8192
 #endif
 
 #define XAMINE_MAXSPEC 5000	/* Maximum spectrum count. */
