@@ -5,7 +5,7 @@ INCLUDES = -I@top_srcdir@ -I. -I@top_srcdir@/Utility \
 	-I@top_srcdir@/SpecTcl  -I@top_srcdir@/Filter \
 	@TCL_FLAGS@ @XINCLUDES@ 
 
-LDFLAGS = @TCL_LDFLAGS@
+AM_LDFLAGS = @TCL_LDFLAGS@
 
 lib_LTLIBRARIES = libAnalysis.la
 libAnalysis_la_LDFLAGS = -version-info $(SOVERSION):0 \
