@@ -5,7 +5,7 @@ INCLUDES = -g  -I. -I@top_srcdir@/Sorter -I@top_srcdir@/Events \
 	-I@top_srcdir@/EventSource -I@top_srcdir@/Display \
 	@TCL_FLAGS@
 
-LDFLAGS  = -L.
+AM_LDFLAGS  = -L.
 
 lib_LTLIBRARIES = libFilter.la
 libFilter_la_LDFLAGS = -version-info $(SOVERSION):0 \
