@@ -3,7 +3,7 @@ INCLUDES = -I.. -I. \
 	-I../SpecTcl -I../Sorter -I../Utility -I../TCL -I../NSCLException \
 	-I../Xamine -I../Events -I../Gates -I../Display @TCL_FLAGS@
 LDADD = -ltclPlus -lException -lXt -lX11
-LDFLAGS = -L. @TCL_LDFLAGS@
+AM_LDFLAGS = -L. @TCL_LDFLAGS@
 
 lib_LTLIBRARIES = libSpecio.la
 
