@@ -1,7 +1,7 @@
 DEFS = @WCHAR_T_DEF@
 INCLUDES = -I.. -I. @TCL_FLAGS@ -I../Utility -I../NSCLException @XINCLUDES@
 LDADD = -ltclPlus -lException -lXt -lX11 $(X11EXTRA_LDFLAGS)
-LDFLAGS = -L. @TCL_LDFLAGS@ 
+AM_LDFLAGS = -L. @TCL_LDFLAGS@ 
 
 lib_LTLIBRARIES = libtclPlus.la
 
@@ -16,6 +16,14 @@ testableSources = TCLInterpreter.cpp TCLProcessor.cpp  \
 	TCLObject.cpp TCLChannel.cpp TCLTracedVariable.cpp \
 	CLanguageTraceCallbacks.cpp
 
+testableOjbects = TCLInterpreter.o   TCLProcessor.o    \
+	TCLVariable.o   TCLString.o    \
+	TCLResult.o   TCLTimer.o   TCLFileHandler.o   \
+	TCLList.o   TCLException.o \
+	TCLInterpreterObject.o   \
+	TCLCommandPackage.o   TCLIdleProcess.o   \
+	TCLObject.o   TCLChannel.o   TCLTracedVariable.o   \
+	CLanguageTraceCallbacks.o  
 
 libtclPlus_la_SOURCES = TCLApplication.cpp $(testableSources)
 
@@ -38,8 +46,9 @@ noinst_HEADERS = Asserts.h
 
 tracetests_SOURCES = TestRunner.cpp \
 			ccallbacktest.cpp \
-			tracevartest.cpp  \
-			$(testableSources)
+			tracevartest.cpp  
+
+tracetests_DEPENDENCIES = $(testableOjects)
 
 tracetests_LDADD = $(CPPUNIT_LDFLAGS) $(X11EXTRA_LDFLAGS) \
 	-L@top_srcdir@/NSCLException -lException
