@@ -19,6 +19,15 @@ MainSources=CFit.cpp  CFitCommand.cpp  CFitCreator.cpp  \
 	CFitFactory.cpp  CLinearFit.cpp  CLinearFitCreator.cpp  \
 	CCalibratedParameter.cpp CCalibratedParameterManager.cpp
 
+MainObjects = CFit.o \
+	  CFitCommand.o    CFitCreator.o    \
+	CFitFactory.o    CLinearFit.o  \
+	  CLinearFitCreator.o    \
+	CCalibratedParameter.o  \
+	CCalibratedParameterManager.o
+	
+
+
 libCalibrations_la_SOURCES = $(MainSources) CCalibratedParameterCommand.cpp 
 
 
@@ -46,17 +55,12 @@ EXTRA_DIST=CalibIO.tcl CalibIOGUI.tcl CalibrateMainGui.tcl \
 #  Makefile.skel will be installed a Makefile in its target directory.
 
 install-exec-local:
-	#  Make the directories we need:
-	#
 	$(mkinstalldirs)    $(prefix)/lib
 	$(mkinstalldirs)    $(prefix)/contrib/calibratedparams
 	$(mkinstalldirs)    $(prefix)/contrib/calibratedparams/include
 	$(mkinstalldirs)    $(prefix)/contrib/calibratedparams/skel
 	$(mkinstalldirs)    $(prefix)/contrib/calibratedparams/Scripts
 	$(mkinstalldirs)    $(prefix)/contrib/calibratedparams/src
-	#
-	#  Put the easy stuff where it belongs.
-	#
 	$(INSTALL_DATA) *.h   $(prefix)/contrib/calibratedparams/include
 	$(INSTALL_DATA) MySpecTclApp.cpp $(prefix)/contrib/calibratedparams/skel
 	$(INSTALL_DATA) MySpecTclApp.h   $(prefix)/contrib/calibratedparams/skel
@@ -64,10 +68,6 @@ install-exec-local:
 	$(INSTALL_DATA) SpecTclRC.tcl    $(prefix)/contrib/calibratedparams/skel
 	$(INSTALL_DATA) *.tcl *.gif      $(prefix)/contrib/calibratedparams/Scripts
 	$(INSTALL_DATA) *.cpp            $(prefix)/contrib/calibratedparams/src
-	#
-	#  Finally we need to make the package  index file so that package require
-	#  will work on this stuff.
-	#
 	chmod a+x ./installpkg
 	./installpkg $(prefix)/contrib/calibratedparams/Scripts
 
@@ -76,9 +76,9 @@ if CPPUNIT
 noinst_PROGRAMS = unittests 
 
 unittests_SOURCES = CommandTest.cpp FitTest.cpp CreatorTest.cpp FactoryTest.cpp \
-	CalibParamTest.cpp CalibManagerTest.cpp TestRunner.cpp \
-	$(MainSources) 
+	CalibParamTest.cpp CalibManagerTest.cpp TestRunner.cpp
 
+unittests_DEPENDENCIES = $(MainObjects)
 
 TestObjects=@top_srcdir@/Events/Event.o @top_srcdir@/SpecTcl/EventProcessor.o
 
